--- a/css/admin_orderSearch.css
+++ b/css/admin_orderSearch.css
@@ -63,6 +63,9 @@ body {
 button:focus {
     outline: none;
 }
+img{
+	max-width: 100%;
+}
 /*=============================================
 =                  Navbar                    =
 =============================================*/
@@ -75,38 +78,96 @@ nav{
 	margin-top: 0px;
 	margin-bottom: 10px;
 }
-.navicon{
-	display: none;
+.btnsignup{
+    border-radius: 35px;
+    width: 100px;
 }
 /*=============================================
 =                  section                    =
 =============================================*/
 section{
-	margin: 0 auto;
-	margin-top: 100px;
-	margin-bottom: 50px;
-	border: 2px silver solid;
-	width: 300px;
-	/* height: 500px; */
-	border-radius: 10px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+/*=============================================
+=                  左選單                     =
+=============================================*/
+.aside{
+    /* border: red solid */
+}
+/*以下為sideBar*/
+.cart{
+    padding-left: 0px;
+    list-style: none;
+	margin: 20px auto;
+}
+.cart a{
+	text-decoration: none;
+	color:#3B3B3B;
 
 }
-form{
-	padding: 20px;
+.cart>li  {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+	margin-bottom: 20px;
 }
-.title{
-	font-size: 36px;
-	font-weight:bold;
-	color: #5B352C;
-	text-align: center;
+
+.cart>li>a{
+    background-color: #3B3B3B;
+    border-radius:35px;
+    color: #fff;
+	display: block;
+	padding: 10px;
 }
-.signinbtn{
-	border-radius: 30px;
-	width: 150px;
-	border: 0px;
-	color: #5B352C;
-	font-weight: bold;
-	background-color: #DFDFDF;
+.cart ul li{
+    list-style: none;
+	margin: 10px;
+}
+
+.cart>li>a:hover, 
+.cart>li>a.active{
+	background-color:#F3AD34;
+    border-radius: 35px;
+    font-weight: bold;
+	color: #3B3B3B;
+}
+
+.cart ul{
+    /* TODO:JS按鈕點選單 */
+	/* display: none; */
+    padding-left: 0px;
+    background-color: #fff;
+}
+.cart ul a:hover{
+    padding-left: 0px;
+    background-color: #F3AD34;
+    color: #fff;
+}
+
+/*以上為sideBar*/
+/*以下為main*/
+.main{
+    /* border: rgb(101, 103, 134) solid; */
+    color: #5B352C;
+}
+.main div>h1{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #5B352C;
+    text-decoration: underline;
+}
+.btnsearch{
+    border: 1px solid black;
+}
+/* 查詢結果 */
+#viewNum{
+    display: inline;
+}
+th,td{
+    text-align: center;
 }
 /*=============================================
 =                  Footer                    =
